# pyroll-interface-friction

./: LICENSE  README.md  hatch.toml  pyproject.toml
docs/: config.py  docs.tex  refs.bib  task_latex.py
pyroll/: interface_friction.py
tests/: test_interface_friction.py  test_interface_friction3.py
